# pylyzer-pre-commit

./: .pre-commit-hooks.yaml  README.md  mirror.nu  pyproject.toml
.github/workflows/: mirror.yml
test/: good.py  good2.py
